# amzsc

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test-and-release.yaml
src/amzsc/: __init__.py  scraper.py
src/amzsc/handlers/: __init__.py  error_handler.py
src/amzsc/modules/driver/: driver_amazon.py  driver_config.py  driver_manipulator.py
src/amzsc/modules/proxy/: __init__.py  proxy.py  proxy_request.py
src/amzsc/utils/: __init__.py  constants.py  custom_types.py  file_worker.py  marketplace.py
tests/: test_file_worker.py  test_marketplace.py  test_proxy.py  test_scraper.py
